--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^2.0.6",
     "gatsby": "^4.10.1",
+    "gatsby-plugin-styled-components": "^5.10.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "prettier": "^2.6.0"
