--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-styled-components": "^2.0.6",
     "gatsby": "^4.10.1",
     "gatsby-plugin-styled-components": "^5.10.0",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "styled-components": "^5.3.3"
