--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "babel-plugin-styled-components": "^2.0.6",
     "gatsby": "^4.10.1",
     "gatsby-plugin-styled-components": "^5.10.0",
+    "gatsby-source-filesystem": "^4.10.1",
+    "gatsby-transformer-remark": "^5.10.2",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
