--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
