--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
   "dependencies": {
     "babel-plugin-styled-components": "^2.0.6",
     "gatsby": "^4.10.1",
+    "gatsby-plugin-image": "^2.10.1",
+    "gatsby-plugin-sharp": "^4.10.2",
     "gatsby-plugin-styled-components": "^5.10.0",
+    "gatsby-remark-images": "^6.10.2",
     "gatsby-source-filesystem": "^4.10.1",
     "gatsby-transformer-remark": "^5.10.2",
+    "gatsby-transformer-sharp": "^4.10.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
