--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-transition-group": "^4.4.2",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "typeface-lato": "^1.1.13"
   },
   "devDependencies": {
     "prettier": "^2.6.0"
