Add anchor for mobile device nav menu

--- a/src/styles/theme.yml
+++ b/src/styles/theme.yml
@@ -49,6 +49,13 @@ nav:
   height: "2.75rem"
   heightMobile: "3rem"
 
+anchor:
+  width: "1.25rem"
+  before: "top 0.25s ease-in 0.125s, transform 0.25s ease-in"
+  beforeActive: "top 0.125s ease-out, transform 0.3s ease-in"
+  after: "bottom 0.25s ease-in 0.125s, transform 0.25s ease-in"
+  afterActive: "bottom 0.125s ease-out, transform 0.3s ease-in"
+
 footer:
   height: "5.5rem"
   heightMobile: "6rem"
