--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-transition-group": "^4.4.2",
+    "scrollreveal": "^4.0.9",
     "styled-components": "^5.3.3",
     "typeface-lato": "^1.1.13"
   },
