--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-scroll": "^1.8.6",
     "react-transition-group": "^4.4.2",
     "scrollreveal": "^4.0.9",
     "styled-components": "^5.3.3",
