--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-styled-components": "^2.0.6",
     "gatsby": "^4.10.1",
     "gatsby-plugin-image": "^2.10.1",
+    "gatsby-plugin-react-helmet": "^5.11.0",
     "gatsby-plugin-sharp": "^4.10.2",
     "gatsby-plugin-styled-components": "^5.10.0",
     "gatsby-remark-images": "^6.10.2",
@@ -26,6 +27,7 @@
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-scroll": "^1.8.6",
     "react-transition-group": "^4.4.2",
     "scrollreveal": "^4.0.9",
