--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "babel-plugin-styled-components": "^2.0.6",
     "gatsby": "^4.10.1",
     "gatsby-plugin-image": "^2.10.1",
+    "gatsby-plugin-manifest": "^4.11.1",
+    "gatsby-plugin-offline": "^5.11.1",
     "gatsby-plugin-react-helmet": "^5.11.0",
     "gatsby-plugin-sharp": "^4.10.2",
     "gatsby-plugin-styled-components": "^5.10.0",
